Partial Sandbox/force-app/main/default/objects/Package__c/Package__c.object-meta.xml
<CustomObject>
    <label>Package</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>