Partial Sandbox/force-app/main/default/objects/Package__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Date delivered.</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>