Partial Sandbox/force-app/main/default/objects/Package__c/fields/Package_Location__c.field-meta.xml
<CustomField>
    <fullName>Package_Location__c</fullName>
    <label>Package Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>