Partial Sandbox/force-app/main/default/objects/Package__c/fields/Payout_Approved__c.field-meta.xml
<CustomField>
    <fullName>Payout_Approved__c</fullName>
    <description>Whether or not the insurance payout has been approved for a missing package.</description>
    <label>Payout Approved</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipping_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>