Partial Sandbox/force-app/main/default/objects/Package__c/fields/Predicted_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Delivery_Date__c</fullName>
    <description>The predicted date this package is due to be delivered. For use in reports which highlight our forecasting ability.</description>
    <inlineHelpText>When is this package due to arrive at its destination?</inlineHelpText>
    <label>Predicted Delivery Date</label>
    <type>Date</type>
</CustomField>