Partial Sandbox/force-app/main/default/objects/Package__c/fields/Process_Run_Minus__c.field-meta.xml
<CustomField>
    <fullName>Process_Run_Minus__c</fullName>
    <formula>CreatedDate + 1.000625</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Run Minus</label>
    <type>DateTime</type>
</CustomField>