Partial Sandbox/force-app/main/default/objects/Package__c/fields/Shipping_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Status__c</fullName>
    <label>Shipping Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Pickup</fullName>
                <default>true</default>
                <label>Waiting for Pickup</label>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>