Partial Sandbox/force-app/main/default/objects/Package__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>A randomly generated tracking number which resists any guessing attempts for security purposes.</description>
    <label>Tracking Number</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>