Partial Sandbox/force-app/main/default/objects/Package__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value in currency of this package.</description>
    <inlineHelpText>Monetary value of package. Important for insurance purposes.</inlineHelpText>
    <label>Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>