Partial Sandbox/force-app/main/default/objects/Package__c/listViews/Past_Packages.listView-meta.xml
<ListView>
    <fullName>Past_Packages</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Shipping_Status__c</field>
        <operation>equals</operation>
        <value>Delivered,Missing</value>
    </filters>
    <label>Past Packages</label>
</ListView>