Partial Sandbox/force-app/main/default/objects/Package__c/listViews/Shipped_Packages.listView-meta.xml
<ListView>
    <fullName>Shipped_Packages</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Shipping_Status__c</field>
        <operation>equals</operation>
        <value>In Transit,Out for Delivery</value>
    </filters>
    <label>Shipped Packages</label>
</ListView>